--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="In honour of Her Majesty Queen Elizabeth II."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-crown.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Queen Elisabeth II.</title>
+    <title>Queen Elizabeth II.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
