:sparkles: added meta tags for link embed

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="In honour of Her Majesty Queen Elizabeth II."
     />
+    <meta property="og:title" content="Queen Elizabeth II" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://queen.aaronwagner.earth/logo-crown.png" />
+    <meta property="og:description" content="In honour of Her Majesty Queen Elizabeth II." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-crown.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
